Some file converted to kotlin, reformat